[package]
name = "nkinematics"
version = "0.1.0"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]

[dependencies]
nalgebra = "0.11.0"
alga = "*"

# for debug/visualization
kiss3d = "0.8.0"
glfw = "*"
#num-traits = "*"

[lib]
name = "nkinematics"
path = "src/lib.rs"

[[bin]]
name = "robot"
path = "src/bin/main.rs"

[[bin]]
name = "ik"
path = "src/bin/ik.rs"
