[package]
name = "path_plan"
version = "0.1.0"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]

[dependencies]
kdtree = "*"
rand = "*"
log = "*"
env_logger = "*"
clippy = { version = "*", optional = true }

[features]
default = []

[dev-dependencies]
approx   = "*"
alga     = "*"
nalgebra = "*"
ncollide = "*"
kiss3d = "*"
