[package]
name = "urdf-viz"
version = "0.1.0"
authors = ["Takashi Ogura <t.ogura@gmail.com>"]

[dependencies]
alga = "0.5.1"
clap = "*"
env_logger = "0.4.2"
glfw = "0.8.0" # required by kiss3d
kiss3d = "0.8.0"
log = "0.3"
nalgebra = "0.11.0"
k = { version = "0.1.0", path = "../k" }
k-urdf = { version = "0.1.0",  path = "../k/k-urdf" }
regex = "0.1"
urdf-rs = "0.1.5"

[[bin]]
name = "urdf_viewer"
path = "src/urdf_viewer.rs"
